# rust_primes

./: .buildinfo  .gitignore  Cargo.toml  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  rust_primes.config.html  rust_primes.decorators.html  rust_primes.html  search.html  searchindex.js
.github/workflows/: CI.yml  gh_pages.yml
_sources/: rust_primes.decorators.rst.txt
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst  rust_primes.config.rst  rust_primes.rst
lib/: .rustc_info.json
lib/debug/.fingerprint/arrayvec-395a695eca81a268/: lib-arrayvec  lib-arrayvec.json
lib/debug/.fingerprint/crossbeam-channel-f3f3aff40dd88978/: lib-crossbeam-channel  lib-crossbeam-channel.json
lib/debug/.fingerprint/indoc-f301a3cbf63ed1f9/: lib-indoc  lib-indoc.json
lib/debug/.fingerprint/libc-25ddbd3b1a112e1b/: run-build-script-build-script-build  run-build-script-build-script-build.json
lib/debug/.fingerprint/libc-7f8f0d23e8eac177/: lib-libc  lib-libc.json
lib/debug/.fingerprint/libc-ff6b5cf0c6c7af5c/: build-script-build-script-build  build-script-build-script-build.json
lib/debug/.fingerprint/lock_api-17fe4613a39a6134/: build-script-build-script-build  build-script-build-script-build.json
lib/debug/.fingerprint/lock_api-a39d86aed55aaad1/: run-build-script-build-script-build  run-build-script-build-script-build.json
lib/debug/.fingerprint/lock_api-d13dfbe42b87b8fd/: lib-lock_api  lib-lock_api.json
lib/debug/.fingerprint/matrixmultiply-980ae60ffafb8beb/: lib-matrixmultiply  lib-matrixmultiply.json
lib/debug/.fingerprint/memoffset-898c737987f004f3/: lib-memoffset  lib-memoffset.json
lib/debug/.fingerprint/memoffset-b161c9361a77eb84/: build-script-build-script-build  build-script-build-script-build.json
lib/debug/.fingerprint/memoffset-b33de80930f5749b/: run-build-script-build-script-build  run-build-script-build-script-build.json
lib/debug/.fingerprint/ndarray-139262ae2df266a2/: lib-ndarray  lib-ndarray.json
lib/debug/.fingerprint/num-complex-4933dacd1c61776f/: lib-num-complex  lib-num-complex.json
lib/debug/.fingerprint/num-format-f226e91c551bf02d/: lib-num-format  lib-num-format.json
lib/debug/.fingerprint/num-integer-3ef42939a5ac1363/: lib-num-integer  lib-num-integer.json
lib/debug/.fingerprint/num-integer-4f3cb0d97e0768af/: run-build-script-build-script-build  run-build-script-build-script-build.json
lib/debug/.fingerprint/num-integer-5dc98a1c6ebb9ad3/: build-script-build-script-build  build-script-build-script-build.json
lib/debug/.fingerprint/num-traits-7836f9a67045c300/: build-script-build-script-build  build-script-build-script-build.json
lib/debug/.fingerprint/num-traits-98cd64f6d418676f/: lib-num-traits  lib-num-traits.json
lib/debug/.fingerprint/num-traits-aaf24942c40cc7a7/: run-build-script-build-script-build  run-build-script-build-script-build.json
lib/debug/.fingerprint/num_cpus-dfedc5c8e959e379/: lib-num_cpus  lib-num_cpus.json
lib/debug/.fingerprint/parking_lot-6315f5b0cdb7356a/: lib-parking_lot  lib-parking_lot.json
lib/debug/.fingerprint/parking_lot_core-374a2bcdfd7cb85a/: run-build-script-build-script-build  run-build-script-build-script-build.json
lib/debug/.fingerprint/parking_lot_core-b50c0a7daab60c76/: lib-parking_lot_core  lib-parking_lot_core.json
lib/debug/.fingerprint/pyo3-46948c5dfc949ca2/: lib-pyo3  (+1 more)
lib/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
lib/doc/lib_rust_primes/: all.html  index.html  sidebar-items.js  struct.IterAtomicSievePrimes.html  trait.CanBeTrue.html  trait.CanSieve.html  trait.IsAtomicSieve.html  trait.SievedArray.html  type.AtomicSieve.html  type.NonAtomicSieve.html  type.OwnedSieve.html  type.Sieve.html  type.ViewSieve.html
rust_primes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: main.rs
src/args/: mod.rs
src/math/: mod.rs
src/options/args/: mod.rs
src/options/output/: mod.rs
src/py/rust_primes/: __init__.py  __main__.py  backend.py  config.py  exceptions.py  func.py
src/rust/: lib.rs  main.rs
src/rust/math/: mod.rs
src/rust/primes/: mod.rs
src/rust/py_compatibility/: enums.rs  mod.rs
src/threading/: mod.rs
tests/: conftest.py  test_count_primes.py  test_env.py  test_timed.py  test_upper_bound.py
(+196 files in other folders)
