[package]
name = "rust_primes"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rust_primes"
path = "src/rust/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-format = "0.4.0"
timeit = "0.1.2"
strum = { version = "0.24", features = ["derive"] }
serde = "1.0.145"
serde-pickle = "1.1.1"
