[package]
name = "rust_primes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust_primes"
path = "src/rust/main.rs"

[lib]
name = "lib_rust_primes"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
num-format = "0.4.0"
timeit = "0.1.2"
strum = { version = "0.24", features = ["derive"] }
ndarray = "0.15.6"
# rayon = "1.5.3"

[package.metadata.maturin]
python-source = "src/py"
name = "rust_primes.lib_rust_primes"
