[package]
name = "rust_primes"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust_primes"
path = "src/rust/main.rs"

[lib]
name = "lib_rust_primes"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
num-format = "0.4"
timeit = "0.1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = { version = "0.24" }
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.5"

[package.metadata.maturin]
python-source = "src/py"
name = "rust_primes.lib_rust_primes"
