[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rust_primes"
authors = [
    {name = "Denny Wong", email = "denny.wong@denwong.com"},
]
version = "1.0.0"
description = "Calculation of Prime numbers using Rust backend."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
]
dependencies= [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pydata-sphinx-theme",
    "pytest",
    "sphinx",
]

[project.urls]
repository = "https://github.com/denwong47/rust_primes"

[tool.setuptools.packages.find]
where = ["src/py", "target"]
namespaces = true

[tool.setuptools.package-data]
rust_backend = ["*"]

[tool.isort]
py_version = 39
profile = "black"
sections=[
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "FORESTREET",
    "LOCALFOLDER",
]
known_third_party = [
    "numpy",
]

[tool.pyright]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "local: marks tests as only intended to be run locally as opposed to e.g. on GitHub actions",
]
