[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "rust_primes"
authors = [
    {name = "Denny Wong Pui-chung", email = "denwong47@hotmail.com"},
]
version = "0.3.0"
description = "Utilities for prime calculations in Python using Rust backend."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies= [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pydata-sphinx-theme",
    "pytest",
    "sphinx",
]

[project.urls]
repository = "https://github.com/denwong47/rust_primes"

[tool.setuptools.packages.find]
where = ["src/py", "bin", "data"]
namespaces = true

[tool.setuptools.package-data]
lib_rust_primes = ["*"]

[tool.maturin]
python-source = "src/py"

[tool.isort]
py_version = 39
profile = "black"
sections=[
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "FORESTREET",
    "LOCALFOLDER",
]
known_third_party = [
    "numpy",
]

[tool.pyright]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "local: marks tests as only intended to be run locally as opposed to e.g. on GitHub actions",
]
